--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ certifi==2020.4.5.1
 chardet==3.0.4
 cloudipsp==1.0.2
 Django==3.0.6
+django-cors-headers==3.3.0
 django-extensions==2.2.9
 django-werkzeug-debugger-runserver==0.3.1
 idna==2.9
 Pillow==7.1.2
+psycopg2-binary==2.8.5
 pytz==2020.1
 requests==2.23.0
 six==1.15.0
